fix: add max width to images to fix large images causing horizontal scrolling on small screens

--- a/static/styles/page.css
+++ b/static/styles/page.css
@@ -104,3 +104,7 @@ h6 {
   font-weight: 400;
   margin-bottom: 0;
 }
+
+img {
+  max-width: 100%;
+}
